--- a/pseudo.css
+++ b/pseudo.css
@@ -14,6 +14,33 @@ input:focus{
 li:first-child{
     background-color: mediumblue;
 }
-li:last-child{
-    background-color: red;
+li:nth-last-child(2n+1){
+    color:yellowgreen;
 }
+/* link visited color change system */
+a:visited{
+    color: green;
+}
+
+/* pseudo element */
+.element::before{
+    content: "hk";
+    font-size: 12px;
+    color: whitesmoke;
+    background-color: goldenrod;
+
+}
+.element::after{
+    content: " khan";
+    font-size: 12px;
+    color: yellowgreen;
+    background-color: tomato;
+}
+body {
+    counter-reset: section;
+  }
+  
+  p::before {
+    counter-increment: section;
+    content: "Crush" counter(section) ": ";
+  }
